minor alignment fix

--- a/wwn.css
+++ b/wwn.css
@@ -255,16 +255,23 @@
   .wwn.sheet.actor.monster .sheet-body .attributes-tab .inventory {
     width: 420px;
   }
+  .wwn.sheet.actor.character .sheet-body .attributes-tab .inventory .item-titles {
+    margin-top: 2px;
+  }
   .wwn.sheet.actor.character .sheet-body .attributes-tab .inventory .item-list {
     flex-wrap: wrap;
     flex-direction: column;
+    height: 370px;
+    justify-content: start;
   }
   .wwn.sheet.actor.character .sheet-body .attributes-tab .inventory .item-name {
     flex-basis: 20%;
     flex-shrink: 1;
+    margin: 0;
   }
   .wwn.sheet.actor.character .sheet-body .attributes-tab .inventory.skills .item-entry {
-    max-width: 150px;
+    max-width: 250px;
+    flex-grow: 0;
   }
   .wwn.sheet.actor .sheet-body .inventory .header-spells {
     line-height: 30px;
